--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint . --fix",
-    "start": "npx ts-node src/index.ts"
+    "build": "rm -rf build && tsc -b",
+    "start-dev": "yarn build && nodemon",
+    "start": "yarn node -r dotenv/config ./require.js && node --loader ts-node/esm src/index.ts",
+    "startbis": "NODE_ENV=development node -r dotenv/config ./require.js && node --loader ts-node/esm src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -24,10 +27,17 @@
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "eslint": "^8.12.0",
+    "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "axios": "^0.26.1"
+    "@js-joda/core": "^5.2.0",
+    "@types/lodash": "^4.14.181",
+    "axios": "^0.26.1",
+    "axios-retry": "^3.2.4",
+    "dotenv": "^16.0.0",
+    "lodash": "^4.17.21",
+    "winston": "^3.7.2"
   }
 }
