--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "axios": "^0.26.1",
     "axios-retry": "^3.2.4",
     "dotenv": "^16.0.0",
+    "ethers": "^5.6.2",
     "lodash": "^4.17.21",
     "winston": "^3.7.2"
   }
