--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,9 @@
 {
+  "printWidth": 80,
+  "tabWidth": 2,
+  "useTabs": false,
   "semi": true,
-  "trailingComma": "all",
   "singleQuote": true,
-  "printWidth": 80
+  "trailingComma": "all",
+  "endOfLine": "lf"
 }
