--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "rm -rf build && tsc -b",
     "start-dev": "yarn build && nodemon",
     "start": "yarn node -r dotenv/config ./require.js && node --loader ts-node/esm src/index.ts",
-    "startbis": "NODE_ENV=development node -r dotenv/config ./require.js && node --loader ts-node/esm src/index.ts"
+    "startbis": "NODE_ENV=development node -r dotenv/config ./require.js && node --loader ts-node/esm src/index.ts",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
   "repository": {
     "type": "git",
@@ -27,7 +28,11 @@
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "eslint": "^8.12.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.15",
+    "prettier": "^2.6.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
