--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "axios-retry": "^3.2.4",
     "dotenv": "^16.0.0",
     "ethers": "^5.6.2",
+    "ipfs": "^0.62.2",
+    "ipfs-http-client": "^56.0.2",
     "lodash": "^4.17.21",
     "winston": "^3.7.2"
   }
