--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint --ignore-path .gitignore --ext ts . --fix",
+    "lint": "eslint --config ./.eslintrc.js --ext .ts,.tsx,.json .",
+    "lint:fix": "eslint --fix --ignore-path .gitignore --ext ts .",
     "build": "rm -rf build && tsc -b",
     "start-dev": "yarn build && nodemon",
     "start": "yarn node -r dotenv/config ./require.js && node --loader ts-node/esm src/index.ts",
@@ -29,7 +30,6 @@
     "@typescript-eslint/parser": "^5.18.0",
     "eslint": "^8.12.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-import-helpers": "^1.2.1",
