--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "axios-retry": "^3.2.4",
     "dotenv": "^16.0.1",
     "ethers": "^5.6.2",
+    "fs-extra": "^10.1.0",
     "ipfs": "^0.62.2",
     "ipfs-http-client": "^56.0.2",
     "lodash": "^4.17.21",
