--- a/packages/back/package.json
+++ b/packages/back/package.json
@@ -9,8 +9,8 @@
     "lint:fix": "eslint --fix --ignore-path .gitignore --ext ts .",
     "build": "rm -rf build && tsc -b",
     "start-dev": "yarn build && nodemon",
-    "start": "yarn node -r dotenv/config ./require.js && node --loader ts-node/esm src/index.ts",
-    "startbis": "NODE_ENV=development node -r dotenv/config ./require.js && node --loader ts-node/esm src/index.ts",
+    "start": "yarn node -r dotenv/config ./require.cjs && node --loader ts-node/esm src/index.ts",
+    "startbis": "NODE_ENV=development node -r dotenv/config ./require.cjs && node --loader ts-node/esm src/index.ts",
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
   "repository": {
@@ -40,6 +40,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@js-joda/core": "^5.2.0",
     "@types/lodash": "^4.14.181",
     "axios": "^0.26.1",
@@ -47,6 +48,7 @@
     "dotenv": "^16.0.1",
     "ethers": "^5.6.2",
     "fs-extra": "^10.1.0",
+    "graphql": "^16.5.0",
     "ipfs": "^0.62.2",
     "ipfs-http-client": "^56.0.2",
     "lodash": "^4.17.21",
