--- a/packages/back/tsconfig.json
+++ b/packages/back/tsconfig.json
@@ -16,7 +16,7 @@
     "target": "es2018",
     "types": [],
     "skipLibCheck": true,
-    "strictNullChecks": true
+    "strictNullChecks": true,
   },
   "exclude": [
     "node_modules",
